--- a/design/style.css
+++ b/design/style.css
@@ -22,9 +22,33 @@ body, html{
     background-color: var(--Light-grey);
 }
 
+@media (max-width: 400px){
+    .card{
+        width: 100%;
+    }
+}
+
+@media (min-width: 401px) and (max-width: 500px){
+    .card{
+        width: 70%;
+    }
+}
+
+@media(min-width: 501px) and (max-width: 900px){
+    .card{
+        width: 50%;
+    }
+}
+
+@media (min-width: 901px){
+    .card{
+        width: 40%;
+    }
+}
+
 .card{
     background-color: var(--White);
-    width: clamp(300px, 50%, 600px);
+    /* width: 50%; */
     height: clamp(200px, 65%, 400px);
     position: relative;
     top: 50%;
