--- a/desafio-frontEdnMentor/src/design/style.css
+++ b/desafio-frontEdnMentor/src/design/style.css
@@ -22,33 +22,9 @@ body, html{
     background-color: var(--Light-grey);
 }
 
-@media (max-width: 400px){
-    .card{
-        width: 100%;
-    }
-}
-
-@media (min-width: 401px) and (max-width: 500px){
-    .card{
-        width: 70%;
-    }
-}
-
-@media(min-width: 501px) and (max-width: 900px){
-    .card{
-        width: 50%;
-    }
-}
-
-@media (min-width: 901px){
-    .card{
-        width: 40%;
-    }
-}
-
 .card{
     background-color: var(--White);
-    /* width: 50%; */
+    width: 50%;
     height: clamp(200px, 65%, 400px);
     position: relative;
     top: 50%;
@@ -58,10 +34,13 @@ body, html{
     border-bottom-right-radius: clamp(80px, 30%, 150px);
 }
 
+
 .form{
     display: flex;
     flex-direction: row;
     justify-content: start;
+    /* background-color: red; */
+    flex-wrap: wrap;
 }
 
 .label-group-one, .label-group-two, .label-group-thre{
@@ -69,6 +48,7 @@ body, html{
     flex-direction: column;
     margin-top: 25px;
     margin-left: 40px;
+    /* background-color: blue; */
 }
 
 .input{
@@ -83,6 +63,7 @@ body, html{
     font-size: 20px;
     font-weight: 600;
     padding-left: 10px;
+    /* background-color: green; */
 }
 
 .input:focus{
