--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -24,7 +24,7 @@ body, html{
 
 .card{
     background-color: var(--White);
-    width: 50%;
+    width: 45%;
     height: clamp(200px, 65%, 400px);
     position: relative;
     top: 50%;
@@ -35,35 +35,40 @@ body, html{
 }
 
 
+@media (max-width: 450px ) {
+    .card{
+        width: 80%;
+    }
+}
+
+
 .form{
     display: flex;
     flex-direction: row;
     justify-content: start;
-    /* background-color: red; */
     flex-wrap: wrap;
+    margin-bottom: 10px;
 }
 
 .label-group-one, .label-group-two, .label-group-thre{
-    display: flex;
-    flex-direction: column;
+    display: block;
     margin-top: 25px;
-    margin-left: 40px;
-    /* background-color: blue; */
+    margin-left: 5%;
+    width: 20%;
 }
 
 .inputs{
-    width: 100px;
+    width: 100%;
     height: 30px;
     border-radius: 5px;
     border-color: var(--Light-grey);
     border-style: solid;
     border-width: 0.5px;
     outline: none;
-    margin-top: 8px;
+    margin-top: 6px;
     font-size: 20px;
     font-weight: 600;
     padding-left: 10px;
-    /* background-color: green; */
 }
 
 .inputs:focus{
@@ -75,16 +80,16 @@ body, html{
     background-color: var(--Light-grey);
     width: 70%;
     height: 1px;
-    margin-top: 30px;
-    margin-left: 40px;
+    margin-top: 6%;
+    margin-left: 5%;
 }
 
 .arrow{
     display: inline-block;
     background-color: var(--Purple);
     border-radius: 100%;
-    width: 65px;
-    height: 60px;
+    width: 14%;
+    height: 15%;
     position: absolute;
     cursor: pointer;
 }
@@ -94,39 +99,37 @@ body, html{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 35px;
+    width: 60%;
+    
 }
 
 .age-result{
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin-left: 40px;
-    font-size: 3em;
+    margin-left: 5%;
+    font-size: 3vw;
+    width: 90%;
+    height: 55%;
+    overflow: hidden;
 }
 
-.dynamic-numbers /*, .dynamic-text*/{
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-    color: var(--Purple);
+
+.dynamic-text{
+    width: 100%;
+    height: 100%;
 }
 
 .result-color{
     color: var(--Purple);
-    opacity: 1;
 }
 
-/* .result-text-color{
-    opacity: 1; 
-} */
-
-.error-empty{
+.error-inputs{
     border-color: var(--Light-red);
-    font-style: var(--Light-red);
 }
 
 .error-text{
-    color: red;
+    color: rgb(211, 52, 52);
     font-size: 15px;
+
 }
