--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,6 +39,9 @@ body, html{
     .card{
         width: 80%;
     }
+    .inputs{
+
+    }
 }
 
 
@@ -66,7 +69,7 @@ body, html{
     border-width: 0.5px;
     outline: none;
     margin-top: 6px;
-    font-size: 20px;
+    font-size: 2vw;
     font-weight: 600;
     padding-left: 10px;
 }
@@ -80,16 +83,16 @@ body, html{
     background-color: var(--Light-grey);
     width: 70%;
     height: 1px;
-    margin-top: 6%;
+    margin-top: 4%;
     margin-left: 5%;
 }
 
 .arrow{
     display: inline-block;
     background-color: var(--Purple);
-    border-radius: 100%;
-    width: 14%;
-    height: 15%;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
     position: absolute;
     cursor: pointer;
 }
@@ -99,7 +102,7 @@ body, html{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
+    width: 70%;
     
 }
 
@@ -108,7 +111,7 @@ body, html{
     flex-direction: column;
     align-items: start;
     margin-left: 5%;
-    font-size: 3vw;
+    font-size: 200%;
     width: 90%;
     height: 55%;
     overflow: hidden;
