--- a/src/assets/css/mobilefirst.css
+++ b/src/assets/css/mobilefirst.css
@@ -35,16 +35,32 @@ html{
     border: 2px solid rgb(224, 11, 3);
     display: flex;
     width: 100%;
+    height: 15%;
+    padding: 10px;
+    margin-top: 10px;
 }
 
 .label-group-one, .label-group-two, .label-group-thre{
     border: 2px solid blue;
-    padding: 5px;
     width: 100%;
-    font-size: 2vw;
+    height: 100%;
+    font-size: 3vw;
+    color: var(--Smokey-grey);
 }
 
 .inputs{
     width: 100%;
-    border: 2px solid green;
+    height: 100%;
+    border-radius: 5px;
+    border:2px solid var(--Light-grey);
+    outline: none;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 5px;
 }
+
+input:focus{
+    border-color: var(--Purple);
+}
+
