--- a/src/assets/css/mobilefirst.css
+++ b/src/assets/css/mobilefirst.css
@@ -21,10 +21,14 @@ html{
 }
 
 .card{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: start;
     border:1px solid black;
     background-color: var(--White);
     width: 80vw;
-    height: 80vh;
+    height: 70vh;
     margin: auto;
     margin-top: 30px;
     border-radius: 20px;
@@ -37,7 +41,6 @@ html{
     width: 100%;
     height: 15%;
     padding: 10px;
-    margin-top: 10px;
 }
 
 .label-group-one, .label-group-two, .label-group-thre{
@@ -64,3 +67,27 @@ input:focus{
     border-color: var(--Purple);
 }
 
+.line{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 0px;
+    border: 1px solid var(--Light-grey);
+}
+
+.arrow{
+    background-color: var(--Purple);
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+}
+
+.arrow-image{
+    width: 50%;
+    height: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
