--- a/src/assets/css/mobilefirst.css
+++ b/src/assets/css/mobilefirst.css
@@ -74,6 +74,7 @@ input:focus{
     width: 100%;
     height: 0px;
     border: 1px solid var(--Light-grey);
+    margin-bottom: 100px;
 }
 
 .arrow{
