--- a/src/assets/css/mobilefirst.css
+++ b/src/assets/css/mobilefirst.css
@@ -23,7 +23,7 @@ html{
 .card{
     display: flex;
     justify-content: space-around;
-    flex-direction: column;
+    flex-direction:column;
     align-items: start;
     border:1px solid black;
     background-color: var(--White);
@@ -36,19 +36,21 @@ html{
 }
 
 .form{
-    border: 2px solid rgb(224, 11, 3);
     display: flex;
-    width: 100%;
+    width: 90%;
     height: 15%;
     padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
 }
 
 .label-group-one, .label-group-two, .label-group-thre{
-    border: 2px solid blue;
     width: 100%;
     height: 100%;
     font-size: 3vw;
     color: var(--Smokey-grey);
+    padding: 5px;
 }
 
 .inputs{
@@ -71,10 +73,11 @@ input:focus{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    margin: auto;
+    margin-bottom: 20px;
+    width: 90%;
     height: 0px;
     border: 1px solid var(--Light-grey);
-    margin-bottom: 100px;
 }
 
 .arrow{
@@ -91,4 +94,28 @@ input:focus{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.age-result{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    font-size: 40px;
+    font-weight: bold;
+    margin: auto;
+}
+
+
+.result-color{
+    color: var(--Purple);
+}
+
+.error-inputs{
+    border-color: var(--Light-red);
+}
+
+.error-text{
+    color: rgb(211, 52, 52);
+    font-size: 15px;
+
 }
