--- a/src/assets/css/mobilefirst.css
+++ b/src/assets/css/mobilefirst.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap');
+
 :root{
     --White: hsl(0, 0%, 100%);
     --Off-white: hsl(0, 0%, 94%);
@@ -12,6 +14,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: 'Poppins', sans-serif;
 }
 
 html{
@@ -25,7 +28,6 @@ html{
     justify-content: space-around;
     flex-direction:column;
     align-items: start;
-    border:1px solid black;
     background-color: var(--White);
     width: 80vw;
     height: 70vh;
@@ -43,12 +45,13 @@ html{
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .label-group-one, .label-group-two, .label-group-thre{
     width: 100%;
     height: 100%;
-    font-size: 3vw;
+    font-size: 2vw;
     color: var(--Smokey-grey);
     padding: 5px;
 }
@@ -60,7 +63,7 @@ html{
     border:2px solid var(--Light-grey);
     outline: none;
     padding: 10px;
-    font-size: 16px;
+    font-size: 100%;
     font-weight: bold;
     margin-top: 5px;
 }
@@ -75,7 +78,7 @@ input:focus{
     align-items: center;
     margin: auto;
     margin-bottom: 20px;
-    width: 90%;
+    width: 80%;
     height: 0px;
     border: 1px solid var(--Light-grey);
 }
@@ -97,12 +100,12 @@ input:focus{
 }
 
 .age-result{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    font-size: 40px;
+    width: 100%;
+    height: 50%;
+    font-size: 30px;
     font-weight: bold;
     margin: auto;
+    margin-left: 30px;
 }
 
 
