--- a/src/assets/css/mobilefirst.css
+++ b/src/assets/css/mobilefirst.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap');
 
 :root{
@@ -29,10 +31,10 @@ html{
     flex-direction:column;
     align-items: start;
     background-color: var(--White);
-    width: 270px;
+    width: 290px;
     height: 500px;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 50px;
     border-radius: 20px;
     border-bottom-right-radius: 150px;
 }
